--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
                            <picture>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png" alt="logo"/>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity: 1;" sizes="100vw" decoding="async" loading="eager" src="../../Images/logo.png" srcSet="../../Images/logo.png" alt="logo"/>
                            </picture>     
                         </div>
                      </a>
