--- a/cases/reseplanerare/index.html
+++ b/cases/reseplanerare/index.html
@@ -418,7 +418,7 @@
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
                            <picture>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png" alt="logo"/>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity: 1;" sizes="100vw" decoding="async" loading="eager" src="../../Images/logo.png" srcSet="../../Images/logo.png" alt="logo"/>
                            </picture>     
                         </div>
                      </a>
@@ -508,7 +508,7 @@
                   <section id="cases-tilted" class="background__bg_themed-sc-as3htg-0 CasesTiltedstyle__Background-sc-1tt4t65-0 eGjaET NimwU trigger">
                      <div class="wrapper__main_inner-sc-d7vgux-0 CasesTiltedstyle__MainInner-sc-1tt4t65-1 evhckS eEXDub">
                       <a href="https://travel-timez.netlify.app/">
-                        <div class="CasesTiltedstyle__ImageBlock-sc-1tt4t65-2 diFMND">
+                        <div class="CasesTiltedstyle__ImageBlock-sc-1tt4t65-2 diFMND container">
                            <div class="CasesTiltedstyle__ColumnOne-sc-1tt4t65-3 jtrHXp one">
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/travel-one.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/travel-two.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
@@ -752,5 +752,45 @@
          <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div>
       </div>
       <script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/cases/reseplanerare/";window.___webpackCompilationHash="6eca5ca3beedc7450e8c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-752e2013a31fa14e7eac.js"],"app":["/app-40c35b496b3ab4a12bd3.js"],"gatsby-plugin-image":["/gatsby-plugin-image-e0257f4cbe694c90b7ba.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx-94cf5e3edf63eec8bb55.js"],"component---src-templates-news-tsx":["/component---src-templates-news-tsx-86f9f5d83b324bc34c0e.js"],"component---src-templates-page-tsx":["/component---src-templates-page-tsx-2f281419ac9369c01938.js"]};/*]]>*/</script><script src="../../polyfill-752e2013a31fa14e7eac.js" nomodule=""></script><script src="../../app-40c35b496b3ab4a12bd3.js" async=""></script><script src="../../dc6a8720040df98778fe970bf6c000a41750d3ae-a3cb1a49be3896b12e36.js" async=""></script><script src="../../framework-ab0eeed1aa5464a561cf.js" async=""></script><script src="../../webpack-runtime-710d81178e1f209a136c.js" async=""></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+      <script>
+      gsap.registerPlugin(ScrollTrigger);
+
+// Define initial transform values for each class
+const initialTransforms = {
+    ".one": 150,
+    ".two": 100,
+    ".three": -510,
+    ".four": 200,
+    ".five": 150,
+    ".six": -150,
+    ".seven": 200
+};
+
+// Create a timeline for each class
+Object.keys(initialTransforms).forEach(className => {
+    const initialTransform = initialTransforms[className];
+    
+    var tl = gsap.timeline({
+        scrollTrigger: {
+            trigger: '.container',
+            start: 'top center', // Adjust as needed
+            end: 'bottom center', // Adjust as needed
+            scrub: true
+        }
+    });
+
+    tl.to(className, { 
+        duration: 1.5, 
+        ease: 'power4.inOut', 
+        opacity: 1, 
+        y: initialTransform, 
+        stagger: .1 
+    });
+});
+
+
+      </script>
    </body>
 </html>
