--- a/vara-tjanster/automatisering-integrationer/index.html
+++ b/vara-tjanster/automatisering-integrationer/index.html
@@ -435,7 +435,7 @@
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
                            <picture>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="100vw" decoding="async" loading="eager" src="/Images/logo.png" srcSet="/Images/logo.png" alt="logo"/>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity: 1;" sizes="100vw" decoding="async" loading="eager" src="../../Images/logo.png" srcSet="../../Images/logo.png" alt="logo"/>
                            </picture>     
                         </div>
                      </a>
@@ -518,12 +518,12 @@
                           
                            <picture>
                               <source type="image/webp" data-srcset="/static/0455f377cb82d41749f97c465fc8db36/c7010/gasell.webp 41w,/static/0455f377cb82d41749f97c465fc8db36/d8405/gasell.webp 82w,/static/0455f377cb82d41749f97c465fc8db36/56b5a/gasell.webp 164w" sizes="(min-width: 164px) 164px, 100vw"/>
-                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="(min-width: 164px) 164px, 100vw" decoding="async" loading="lazy" data-src="/static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png" data-srcset="/static/0455f377cb82d41749f97c465fc8db36/3d0b3/gasell.png 41w,/static/0455f377cb82d41749f97c465fc8db36/0831f/gasell.png 82w,/static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png 164w" alt="Gasellvinnare 2023"/>
+                              <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity: 1;" sizes="(min-width: 164px) 164px, 100vw" decoding="async" loading="lazy" data-src="/static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png" data-srcset="/static/0455f377cb82d41749f97c465fc8db36/3d0b3/gasell.png 41w,/static/0455f377cb82d41749f97c465fc8db36/0831f/gasell.png 82w,/static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png 164w" alt="Gasellvinnare 2023"/>
                            </picture>
                            <noscript>
                               <picture>
                                  <source type="image/webp" srcSet="/static/0455f377cb82d41749f97c465fc8db36/c7010/gasell.webp 41w,/static/0455f377cb82d41749f97c465fc8db36/d8405/gasell.webp 82w,/static/0455f377cb82d41749f97c465fc8db36/56b5a/gasell.webp 164w" sizes="(min-width: 164px) 164px, 100vw"/>
-                                 <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity:0" sizes="(min-width: 164px) 164px, 100vw" decoding="async" loading="lazy" src="../../static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png" srcSet="../../static/0455f377cb82d41749f97c465fc8db36/3d0b3/gasell.png 41w,../../static/0455f377cb82d41749f97c465fc8db36/0831f/gasell.png 82w,../../static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png 164w" alt="Gasellvinnare 2023"/>
+                                 <img data-gatsby-image-ssr="" data-main-image="" style="object-fit:contain;opacity: 1;" sizes="(min-width: 164px) 164px, 100vw" decoding="async" loading="lazy" src="../../static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png" srcSet="../../static/0455f377cb82d41749f97c465fc8db36/3d0b3/gasell.png 41w,../../static/0455f377cb82d41749f97c465fc8db36/0831f/gasell.png 82w,../../static/0455f377cb82d41749f97c465fc8db36/72f23/gasell.png 164w" alt="Gasellvinnare 2023"/>
                               </picture>
                            </noscript>
                            <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
