--- a/vara-tjanster/starta-ett-projekt/index.html
+++ b/vara-tjanster/starta-ett-projekt/index.html
@@ -509,22 +509,21 @@
                                  </button>
                                  <h5 class="text__heading_sm-sc-1xracbr-5 SideContactFormstyled__FormTitle-sc-xpl7fe-8 iehGeS eptbJs">Kom igång redan idag!</h5>
                                  <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__FormParagraph-sc-xpl7fe-9 ksIOdr cyMEjy">Boka 30 minuters kostnadsfri rådgivning med oss för att få våra tips och ta reda på vad vi kan åstadkomma tillsammans.</p>
-                                 <div class="SideContactFormstyled__InnerFormWrapper-sc-xpl7fe-5 qYfOQ">
-                                    <div class="SideContactFormstyled__FormColumn-sc-xpl7fe-17 iSgPVl">
-                                        <input type="text" placeholder="Namn*" value="" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc" id="name"/>
-                                        <input type="text" placeholder="E-post*" value="" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc" id="email"/>
-                                        <input type="text" placeholder="Telefonnummer" value="" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc" id="phone"/>
-                                    </div>
-                                    <div class="SideContactFormstyled__FormColumn-sc-xpl7fe-17 iSgPVl">
-                                        <textarea placeholder="Meddelande" class="SideContactFormstyled__InputField-sc-xpl7fe-21 bYTiwv" id="message"></textarea>
-                                        <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__InputLabel-sc-xpl7fe-22 ksIOdr iYTukQ">
-                                            <div class="SideContactFormstyled__CheckBoxWrapper-sc-xpl7fe-23 kQWdyq">
-                                                <input type="checkbox" class="SideContactFormstyled__InputCheckbox-sc-xpl7fe-24 gLyNAr" id="agree"/>Jag godkänner villkoren i pasver:s
-                                                <a href="../../privacy-cookie-policy/index.html" class="SideContactFormstyled__GdprLink-sc-xpl7fe-25 fmiVnW">personuppgiftspolicy.</a>
-                                            </div>
-                                        </p>
-                                        <button class="SideContactFormstyled__SubmitButton-sc-xpl7fe-26 caFxEC" onclick="submitForm()">Skicka</button>
-                                    </div>
+                               <div class="SideContactFormstyled__InnerFormWrapper-sc-xpl7fe-5 qYfOQ">
+                                   <form action="" id="yourForm">
+                                        <div class="SideContactFormstyled__FormColumn-sc-xpl7fe-17 iSgPVl">
+                                            <input type="text" placeholder="Namn*" value="" name="name" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc" required="">
+                                            <input type="email" placeholder="E-post*" value="" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc" id="email" name="email" required="">
+                                            <input type="text" placeholder="Telefonnummer" name="phoneNumber" value="" class="SideContactFormstyled__Input-sc-xpl7fe-20 cwoHtc">
+                                        </div>
+                                        <div class="SideContactFormstyled__FormColumn-sc-xpl7fe-17 iSgPVl">
+                                            <textarea placeholder="Meddelande" name="message" class="SideContactFormstyled__InputField-sc-xpl7fe-21 bYTiwv"></textarea>
+                                            <p class="text__paragraph_small-sc-1xracbr-9 SideContactFormstyled__InputLabel-sc-xpl7fe-22 ksIOdr iYTukQ">
+                                                <button class="SideContactFormstyled__SubmitButton-sc-xpl7fe-26 caFxEC sidebarfrombtn">Skicka</button>
+                                        </p></div>
+                                        <div id="errorFrom"></div>
+                                        <div id="successMessage"></div>
+                                    </form>
                                 </div>
                               </div>
                               <div class="SideContactFormstyled__ContactContainer-sc-xpl7fe-10 jQETUf">
@@ -759,24 +758,21 @@
                          <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Önskar du ytterligare information?</h2>
                          <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Söker du någon som kan vägleda dig genom den digitala sfären? Vi är tillgängliga för att besvara dina frågor, erbjuda vägledning eller dela med oss av mer detaljer om vår arbetsmetodik. Vänligen skicka oss en e-post, och vi kommer att ta kontakt med dig inom kort!</p>
                          <h5 class="text__heading_sm-sc-1xracbr-5 contactFormContentstyle__SubHeader-sc-1wvwxzl-5 iehGeS ijChgB">Send an Email</h5>
-                         <form id="yourForm" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG">
+                        <form id="yourForm" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG" data-gtm-form-interact-id="0">
+                             <div id="errorFrom"></div>
                            <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
-                             <input type="text" placeholder="Namn*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="name" required />
+                             <input type="text" placeholder="Namn*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="name" required="" data-gtm-form-interact-field-id="0">
                              <div class="error-message" id="nameError"></div>
-                             <input type="email" placeholder="E-post*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="email" required />
+                             <input type="email" placeholder="E-post*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="email" required="" data-gtm-form-interact-field-id="1">
                              <div class="error-message" id="emailError"></div>
-                             <input type="tel" placeholder="Telefonnummer" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="phoneNumber" />
-                             <input type="text" placeholder="Jobbtitel" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="jobTitle" />
+                             <input type="tel" placeholder="Telefonnummer" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="phoneNumber" data-gtm-form-interact-field-id="2">
+                             <input type="text" placeholder="Jobbtitel" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="jobTitle" data-gtm-form-interact-field-id="3">
                            </div>
                            <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
-                             <textarea placeholder="Meddelande" class="contactFormContentstyle__InputField-sc-1wvwxzl-17 jLiNwd" name="message"></textarea>
+                             <textarea placeholder="Meddelande" class="contactFormContentstyle__InputField-sc-1wvwxzl-17 jLiNwd" name="message" data-gtm-form-interact-field-id="4"></textarea>
                              <div class="error-message" id="messageError"></div>
-                             <p class="text__paragraph_small-sc-1xracbr-9 contactFormContentstyle__InputLabel-sc-1wvwxzl-18 ksIOdr jLQVVy">
-                               <input type="checkbox" class="contactFormContentstyle__InputCheckbox-sc-1wvwxzl-19 cSaYma" name="checkbox" required />Jag godkänner villkoren i pasver:s
-                               <a href="../../../privacy-cookie-policy/index.html" class="contactFormContentstyle__GdprLink-sc-1wvwxzl-20 ildqRY">personuppgiftspolicy.</a>
-                             </p>
-                             <button type="button" onclick="submitForm()" class="contactFormContentstyle__SubmitButton-sc-1wvwxzl-21 gLuJmm" >Skicka</button>
-                             <p id="successMessage" style="display: none; color: green; margin-top: 10px; font-weight: bold;">Tack för ditt meddelande! Vi återkommer snart.</p>
+                             <button type="submit" class="contactFormContentstyle__SubmitButton-sc-1wvwxzl-21 gLuJmm">Skicka</button>
+                             <p id="successMessage" style="color: green; margin-top: 10px; font-weight: bold;">Your message has been sent successfully!</p>
                            </div>
                          </form>
                        </div>
@@ -850,6 +846,74 @@
          </div>
          <div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div>
       </div>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script>
+         $(document).ready(function () {
+    $('#yourForm').submit(function (event) {
+        event.preventDefault(); // Prevent the default form submission
+
+        // Serialize form data
+        var formData = $(this).serialize();
+
+        // AJAX request
+        $.ajax({
+            url: 'https://pasver.se/processform.php',
+            method: 'POST',
+            data: formData,
+            dataType: 'json',
+            success: function (response) {
+                
+                console.log(response);
+                if (response.success) {
+                    $('#successMessage').text(response.success);
+                } else {
+                    console.error(response.error);
+                }
+            },
+            error: function (xhr, status, error) {
+                console.error(error);
+            }
+        });
+
+        // Clear the form fields
+        $(this).trigger('reset');
+    });
+});
+      </script>
+       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+       <script>
+          $(document).ready(function () {
+     $('#yourForm').submit(function (event) {
+         event.preventDefault(); // Prevent the default form submission
+ 
+         // Serialize form data
+         var formData = $(this).serialize();
+ 
+         // AJAX request
+         $.ajax({
+             url: 'https://pasver.se/processform.php',
+             method: 'POST',
+             data: formData,
+             dataType: 'json',
+             success: function (response) {
+                 
+                 console.log(response);
+                 if (response.success) {
+                     $('#successMessage').text(response.success);
+                 } else {
+                     console.error(response.error);
+                 }
+             },
+             error: function (xhr, status, error) {
+                 console.error(error);
+             }
+         });
+ 
+         // Clear the form fields
+         $(this).trigger('reset');
+     });
+ });
+       </script>
       <script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/vara-tjanster/starta-ett-projekt/";window.___webpackCompilationHash="6eca5ca3beedc7450e8c";/*]]>*/</script><script id="gatsby-chunk-mapping">/*<![CDATA[*/window.___chunkMapping={"polyfill":["/polyfill-752e2013a31fa14e7eac.js"],"app":["/app-40c35b496b3ab4a12bd3.js"],"gatsby-plugin-image":["/gatsby-plugin-image-e0257f4cbe694c90b7ba.js"],"component---src-pages-404-tsx":["/component---src-pages-404-tsx-94cf5e3edf63eec8bb55.js"],"component---src-templates-news-tsx":["/component---src-templates-news-tsx-86f9f5d83b324bc34c0e.js"],"component---src-templates-page-tsx":["/component---src-templates-page-tsx-2f281419ac9369c01938.js"]};/*]]>*/</script><script src="../../polyfill-752e2013a31fa14e7eac.js" nomodule=""></script><script src="../../app-40c35b496b3ab4a12bd3.js" async=""></script><script src="../../dc6a8720040df98778fe970bf6c000a41750d3ae-a3cb1a49be3896b12e36.js" async=""></script><script src="../../framework-ab0eeed1aa5464a561cf.js" async=""></script><script src="../../webpack-runtime-710d81178e1f209a136c.js" async=""></script>
    </body>
 </html>
