--- a/vara-tjanster/automatisering-integrationer/index.html
+++ b/vara-tjanster/automatisering-integrationer/index.html
@@ -407,14 +407,7 @@
            <link rel="icon" href="/Images/favicon.ico" type="image/png"/>
 
       <link rel="manifest" href="../../manifest.webmanifest" crossorigin="anonymous"/>
-      <link rel="apple-touch-icon" sizes="48x48" href="../../icons/icon-48x48.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="72x72" href="../../icons/icon-72x72.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="96x96" href="../../icons/icon-96x96.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="144x144" href="../../icons/icon-144x144.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="192x192" href="../../icons/icon-192x192.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="256x256" href="../../icons/icon-256x256.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="384x384" href="../../icons/icon-384x384.png@v=e607ec5d29294ef9194c47d59c130c16"/>
-      <link rel="apple-touch-icon" sizes="512x512" href="../../icons/icon-512x512.png@v=e607ec5d29294ef9194c47d59c130c16"/>
+     <link rel="" href="">
       <link rel="sitemap" type="application/xml" href="../../sitemap/sitemap-index.xml"/>
       <link rel="stylesheet" href="/style.css">
       <script src="/main.js"></script>
