--- a/index.html
+++ b/index.html
@@ -513,7 +513,9 @@
          data-styled.g745[id="sc-keyframes-hqVOOe"]{content:"hqVOOe,"};
       </style>
       <title data-react-helmet="true">PASVER IT SOLUTIONS</title>
-      <link rel="icon" href="./Images/favicon.ico" type="image/png"/>
+      <link rel="icon" href="/Images/favicon.ico" type="image/png"/>
+      <link rel="shortcut icon" href="/Images/favicon.ico">
+      <link rel="icon" href="/Images/favicon.ico" type="image/x-icon">
       <link rel="manifest" href="manifest.webmanifest" crossorigin="anonymous"/>
       <link rel="sitemap" type="application/xml" href="sitemap/sitemap-index.xml"/>
       <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
